--- a/web_nuxt/package.json
+++ b/web_nuxt/package.json
@@ -3,18 +3,44 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"generate-version-file": "echo {\\\"version\\\": \\\"$npm_package_version\\\"} > src/public/version.json",
 		"build": "nuxt build",
-		"dev": "nuxt dev",
+		"dev": "npm run generate-version-file && NODE_ENV=development nuxt dev --host --https --ssl-cert cert/localhost.pem --ssl-key cert/localhost-key.pem --dotenv env/.env.local",
+		"pregenerate": "rm -rf ../web/_nuxt",
 		"generate": "nuxt generate",
-		"preview": "nuxt preview",
+		"postgenerate": "node scripts/mergeIndex.js && node scripts/mergeDist.js",
+		"preview": "npm run generate && cd .. && python main.py",
 		"postinstall": "nuxt prepare",
-		"postgenerate": "node scripts/mergeIndex.js && mv ./dist/* ../web/",
-		"pregenerate": "rm -rf ../web/_nuxt"
+		"start": "nuxt start",
+		"lint": "eslint .",
+		"format": "eslint --fix . ",
+		"utils:unused-components": "node utils/find-unused-components.js"
 	},
 	"dependencies": {
-		"jsdom": "^25.0.1",
+		"@honoo-creators/ui": "file:../../honoo-ui-components/packs/honoo-creators-ui-1.3.5.tgz",
+		"@nuxt/devtools": "^1.4.1",
+		"@pinia/plugin-debounce": "^1.0.1",
+		"normalize.css": "^8.0.1",
 		"nuxt": "^3.13.0",
+		"pinia": "^2.1.7",
+		"ts-debounce": "^4.0.0",
 		"vue": "latest",
 		"vue-router": "latest"
+	},
+	"devDependencies": {
+		"@nuxt/eslint": "^0.3.13",
+		"@types/node": "^18",
+		"@typescript-eslint/eslint-plugin": "^7.11.0",
+		"@typescript-eslint/parser": "^7.11.0",
+		"eslint": "^8.57.0",
+		"jsdom": "^25.0.1",
+		"sass-embedded": "^1.79.3"
+	},
+	"overrides": {
+		"vue": "latest"
+	},
+	"volta": {
+		"node": "18.20.2",
+		"npm": "10.6.0"
 	}
 }
